@@ -671,7 +671,8 @@ input[type=checkbox].es_dlc_selection:checked + label {
 .es_active_total {
 	float: right;
 	text-align: center;
-	padding-top: 6px;
+	padding-top: 4px;
+	font-size: 12px;
 }
 #game_background {
 	height: 700px !important;
